# mirax_profileinfo_extractor

./: .gitignore  Makefile  Readme.md  extractor.py  profileinfo_extractor.c  pyproject.toml  setup.py
conda_pkg/: meta.yaml
lib/: profileinfo_extractor.c
src/mirax_profileinfo_extractor/: extractor.py
tests/: test_extract_profile_info.py
